syntax = "proto3";

package teddy.todos.notification;

// types: -----------------------------------------------------------------------
message Notification {
    string id = 1;
    string message = 2;
    string type = 3;
    string isRead = 4;
}
  
// messages: --------------------------------------------------------------------
message NotificationRequest {
    string userId = 1;  // Identify the user subscribing to notifications
}
  
message NotificationResponse {
    Notification notification = 1;
}

message GetNotificationsRequest {
    string userId = 1;
}

message GetNotificationsResponse {
    repeated Notification notifications = 5;
}

message SetReadRequest {
    string id = 2;
}

// services: --------------------------------------------------------------------
service NotificationService {
    rpc SubscribeToNotifications(NotificationRequest) returns (stream NotificationResponse);
    rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
    rpc SetRead(SetReadRequest) returns (Notification);
  }